--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
+title: Remi's log
+logo: /assets/img/logo.png
+description: Stuff.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-minimal
+
+email: "remidebord@hotmail.com"
+twitter_username: "RmiDebord1"
+github_username: "remidebord"
+linkedin_username: "rémi-debord-12664043"
