--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,9 @@ minima:
 # Build settings
 theme: minima
 
+# Comments
+disqus_shortname: remidebord-github-io
+
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
