--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Remi's blog
+title: Remi Debord blog
 author:
   name: Rémi Debord
   email: remidebord@hotmail.fr
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
+  Awesome description for my new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
