--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Remi Debord blog
+title: [Blog]
 author:
   name: Rémi Debord
   email: remidebord@hotmail.fr
@@ -12,7 +12,7 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
-  date_format: "%Y-%m-%d"
+  date_format: "%d/%m/%Y"
 
   # generate social links in footer
   social_links:
