--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ author:
   name: Rémi Debord
   email: remidebord@hotmail.fr
 description: > # this means to ignore newlines until "show_excerpts:"
-  Awesome description for my new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A free place for useless stuff. 
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
