--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ theme: minima
 # Number of posts per page
 paginate: 22
 
+paginate_path: "/blog/page:num/"
+
 # Comments
 disqus:
   shortname: remidebord-github-io
