Fix menu background and add Youtube channel

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ minima:
   social_links:
     twitter: remi_debord
     github:  remidebord
+    youtube_channel: UCNci0uJwtoPPdSvZXcX7YGQ
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
